[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "oss-maintainer-toolbelt"
version = "0.1.0"
description = "Small dependency-free CLI helpers for open source maintainers."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "NightwalkPl" }]
keywords = ["open-source", "maintainers", "changelog", "github", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Version Control :: Git",
]

[project.scripts]
omt = "oss_maintainer_toolbelt.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

